--- a/grade.html
+++ b/grade.html
@@ -13,8 +13,8 @@
             <!-- Grade buttons will appear here. -->
         </div>
         <script src="jquery-1.10.2.min.js" type="text/javascript"></script>
-        <script src="filmtipsetApi.js" type="text/javascript"></script>
-        <script src="common.js" type="text/javascript"></script>
-        <script src="popup.js" type="text/javascript"></script>
+        <script src="Filmtipset.FilmtipsetApi.js" type="text/javascript"></script>
+        <script src="Filmtipset.Common.js" type="text/javascript"></script>
+        <script src="Filmtipset.Popup.js" type="text/javascript"></script>
     </body>
 </html>
