--- a/personal.html
+++ b/personal.html
@@ -73,9 +73,9 @@ input {
 
 <script src="jquery-1.10.2.min.js"></script>
 
-<script src="common.js"></script>
+<script src="Filmtipset.Common.js"></script>
 
-<script src="personal.js"></script>
+<script src="Filmtipset.Personal.js"></script>
 
 </body>
 </html>
