--- a/filmtipset.html
+++ b/filmtipset.html
@@ -1,10 +1,10 @@
 ﻿<!DOCTYPE html>
 <html>
     <head>
-        <script src="common.js" type="text/javascript"></script>
+        <script src="Filmtipset.Common.js" type="text/javascript"></script>
         <script src="cache.js" type="text/javascript"></script>
-        <script src="filmtipsetApi.js" type="text/javascript"></script>
-        <script src="filmtipset.js" type="text/javascript"></script>
+        <script src="Filmtipset.FilmtipsetApi.js" type="text/javascript"></script>
+        <script src="Filmtipset.ExtensionHost.js" type="text/javascript"></script>
         <title>Filmtipset</title>
     </head>
     <body>
