inline scripts moved to page-specific js files

--- a/filmtipset.html
+++ b/filmtipset.html
@@ -1,10 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
     <head>
-        <script src="Filmtipset.Common.js" type="text/javascript"></script>
         <script src="cache.js" type="text/javascript"></script>
+        <script src="Filmtipset.js" type="text/javascript"></script>
+        <script src="Filmtipset.Common.js" type="text/javascript"></script>
         <script src="Filmtipset.FilmtipsetApi.js" type="text/javascript"></script>
         <script src="Filmtipset.ExtensionHost.js" type="text/javascript"></script>
+        <script src="filmtipset.html.js" type="text/javascript"></script>
         <title>Filmtipset</title>
     </head>
     <body>
