--- a/personal.html
+++ b/personal.html
@@ -77,5 +77,7 @@ input {
 
 <script src="Filmtipset.Personal.js"></script>
 
+<script src="Filmtipset.Personal.html.js"></script>
+
 </body>
 </html>
