user api key validation

--- a/personal.html
+++ b/personal.html
@@ -73,11 +73,15 @@ input {
 
 <script src="jquery-1.10.2.min.js"></script>
 
+<script src="Filmtipset.js"></script>
+
 <script src="Filmtipset.Common.js"></script>
 
 <script src="Filmtipset.Personal.js"></script>
 
-<script src="Filmtipset.Personal.html.js"></script>
+<script src="Filmtipset.FilmtipsetApi.js"></script>
+
+<script src="personal.html.js"></script>
 
 </body>
 </html>
