--- a/extension-pages/filmtipset.html
+++ b/extension-pages/filmtipset.html
@@ -5,6 +5,7 @@
         <script src="../js/Filmtipset/Filmtipset.js" type="text/javascript"></script>
         <script src="../js/Filmtipset/Filmtipset.Common.js" type="text/javascript"></script>
         <script src="../js/Filmtipset/Filmtipset.FilmtipsetApi.js" type="text/javascript"></script>
+        <script src="../js/Filmtipset/Filmtipset.ContentScriptRequest.js" type="text/javascript"></script>
         <script src="../js/Filmtipset/Filmtipset.ExtensionHost.js" type="text/javascript"></script>
         <script src="filmtipset.html.js" type="text/javascript"></script>
         <title>Filmtipset</title>
