User-friendlier Grade Pop-Up (maybe)

--- a/extension-pages/grade.html
+++ b/extension-pages/grade.html
@@ -3,7 +3,28 @@
     <head>
         <style type="text/css">
             body {
-                margin: 5px;
+                margin: 2em;
+                font-size: large;
+                font-family: sans-serif;
+                }
+            img {
+                cursor: pointer;
+                transition: all 0.1s ease-in-out; 
+                }
+            a {
+                cursor: pointer;
+                }
+            div.voteimage {
+                margin-bottom: 1em;
+                }
+            img:hover {
+                transform: scale(1.2);
+                }
+            div.i18n {
+                transition: all 0.2s ease-in-out;
+                }
+            div.i18n:hover {
+                transform: scale(1.2);
                 }
         </style>
     <title>Filmtipset</title>
